# pytest-template

./: .env  .gitignore  .pre-commit-config.yaml  00864748-8ca2-4b5c-8d24-8e4fb77aa49f-result.json  011677dd-97cb-4417-95f7-185c07d0d3c0-container.json  0200c37e-8483-4623-ba2f-5452a95e8666-container.json  06d58e4a-67b9-49a7-9a18-23f4cd97d081-result.json  08d6a910-6bb2-4196-8b78-8303243def50-container.json  0d360e59-08c4-47af-b6d1-6664cf48a055-result.json  0e1404c7-e601-47ed-a8fc-1900d698c4c2-container.json  13172be8-5bb2-448a-827c-4106109cd15a-result.json  15a97062-1a74-4f2d-b8a8-170298e7f9ac-result.json  211df949-f879-4b4a-959d-d3939dfd5701-result.json  2190e69f-f3c0-4d56-9d60-60abac11e7dd-container.json  27c1fec9-10fc-4b39-a54d-c008f079d3c8-result.json  28770df0-47ce-48ac-b738-69e197364022-result.json  2b599420-bea3-4ebc-8b47-b70dffa5a959-container.json  2c80c728-5c13-43f4-81cf-bc947927a7ce-result.json  2f09ea59-c436-48d4-8896-575cc6c8411b-result.json  33970d90-8db9-4547-8921-61beda5a2029-result.json  360831fa-7c97-4fcd-9390-9e985b09c756-result.json  37e8eb0f-f9fa-4a80-8e98-76993683034b-result.json  39a40870-a80b-4b80-b62f-d4b5a2b47f46-result.json  3f2b20c1-9f71-409c-bbd9-0c6ac3194b34-result.json  41a065e3-800b-41c5-96a5-1c2e557ad366-result.json  43bde480-4e1e-4778-af8b-84120c18e57e-container.json  4c90c0fc-1f61-41d8-abdc-636bb31bc708-result.json  5212bc38-6f7a-4f75-926f-946a33c24665-result.json  52918214-11b9-4060-9513-9a5326f66bcc-result.json  5974f571-a7d1-4630-85ea-e4358ae7e467-result.json  5c650106-f424-4d93-87f2-4843daee8ed8-result.json  (+58 more)
10/: index.html
(+593 files in other folders)
